Got the searing bow to shoot black arrows

--- a/build.gradle
+++ b/build.gradle
@@ -24,19 +24,20 @@ sourceSets {
             exclude '**/invasion/world/**'
             exclude '**/invasion/village/**'
             exclude '**/invasion/structure/**'
-            exclude '**/invasion/client/**'
+            exclude '**/invasion/client/render/**'
             exclude '**/invasion/TerrainDataLayer.java'
             //exclude '**/invasion/nexus/**'
             exclude '**/invasion/IPathfindable.java'
             exclude '**/invasion/util/spawneggs/**'
-            exclude '**/invasion/util/**'
+            exclude '**/invasion/util/config/**'
+            exclude '**/invasion/util/VersionChecker.java'
             exclude '**/invasion/entity/**'
             exclude '**/invasion/nexus/WaveSpawner.java'
             exclude '**/invasion/nexus/EntityPattern.java'
             exclude '**/invasion/nexus/WaveBuilder.java'
             exclude '**/invasion/nexus/WaveEntry.java'
-            exclude '**/invasion/nexus/SpawnPointContainer.java'
-            exclude '**/invasion/nexus/SpawnPoint.java'
+            //exclude '**/invasion/nexus/SpawnPointContainer.java'
+            //exclude '**/invasion/nexus/SpawnPoint.java'
             exclude '**/invasion/nexus/MobBuilder.java'
             exclude '**/invasion/nexus/Invasion.java'
             exclude '**/invasion/nexus/Wave.java'
@@ -47,7 +48,7 @@ sourceSets {
             exclude '**/invasion/item/trap/**'
             exclude '**/invasion/item/DebugWandItem.java'
             exclude '**/invasion/item/ProbeItem.java'
-            exclude '**/invasion/item/SearingBowItem.java'
+            //exclude '**/invasion/item/SearingBowItem.java'
             exclude '**/invasion/item/StrangeBoneItem.java'
 
 
