--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ sourceSets {
             exclude '**/invasion/entity/monster/EntityIMSpider.java'
             exclude '**/invasion/entity/monster/EntityIMThrower.java'
             exclude '**/invasion/entity/monster/EntityIMZombiePigman.java'
-            exclude '**/invasion/entity/monster/ImpEntity.java'
+            //exclude '**/invasion/entity/monster/ImpEntity.java'
             exclude '**/invasion/entity/monster/InvadingZombieEntity.java'
             exclude '**/invasion/entity/monster/MoulderingCreeperEntity.java'
             exclude '**/invasion/entity/monster/PigEngyEntity.java'
@@ -68,11 +68,11 @@ sourceSets {
             exclude '**/invasion/client/render/CloakedSkeletonRenderer.java'
             exclude '**/invasion/client/render/ThrowerRenderer.java'
             exclude '**/invasion/client/render/MoulderingCreeperRenderer.java'
-            exclude '**/invasion/client/render/ImpRenderer.java'
+            //exclude '**/invasion/client/render/ImpRenderer.java'
             exclude '**/invasion/client/render/DogRenderer.java'
             exclude '**/invasion/client/render/PigEngyRenderer.java'
             exclude '**/invasion/client/render/model/Model*.java'
-            exclude '**/invasion/client/render/model/ImpModel.java'
+            //exclude '**/invasion/client/render/model/ImpModel.java'
             exclude '**/invasion/client/render/model/ThrowerModel.java'
             exclude '**/invasion/client/render/model/BoulderModel.java'
 
