--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ sourceSets {
             //exclude '**/invasion/entity/monster/MoulderingCreeperEntity.java'
             exclude '**/invasion/entity/monster/PigEngyEntity.java'
             exclude '**/invasion/entity/ai/**'
-            exclude '**/invasion/entity/ally/**'
+            exclude '**/invasion/entity/ally/Entity*.java'
             exclude '**/invasion/entity/projectile/**'
             exclude '**/invasion/entity/block/**'
             exclude '**/invasion/entity/EntityIMLiving.java'
@@ -65,11 +65,11 @@ sourceSets {
             exclude '**/invasion/client/render/BoltRenderer.java'
             exclude '**/invasion/client/render/BoulderRenderer.java'
             exclude '**/invasion/client/render/Render*.java'
-            exclude '**/invasion/client/render/CloakedSkeletonRenderer.java'
+            //exclude '**/invasion/client/render/CloakedSkeletonRenderer.java'
             exclude '**/invasion/client/render/ThrowerRenderer.java'
             //exclude '**/invasion/client/render/MoulderingCreeperRenderer.java'
             //exclude '**/invasion/client/render/ImpRenderer.java'
-            exclude '**/invasion/client/render/DogRenderer.java'
+            //exclude '**/invasion/client/render/DogRenderer.java'
             exclude '**/invasion/client/render/PigEngyRenderer.java'
             exclude '**/invasion/client/render/model/Model*.java'
             //exclude '**/invasion/client/render/model/ImpModel.java'
